# emotext

./: .dockerignore  Dockerfile  README.md  gh.Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
emotext/: emotext.py  httpapi.py  vaLoad.py
emotext/data/: 情感词汇-VAspace.csv  情感词汇-VAspace.xlsx
tests/: test_emotext.py
